# config_files

./: .gitignore  .gitmodules  .pylintrc  .zshenv  .zshrc  .zshrc.zni  00-keyboard.conf  af-magic.zsh-theme  chromium-wayland.desktop  chromium.desktop  disable-mon.sh  fonts-list.txt  fonts.list  hostscan-bypass.sh  kitty.conf  lemonade.toml  mh.zsh-theme  neovim2_requirements.txt  neovim3_requirements.txt  packages.txt  picom.conf  pkglist.txt  pylama.ini  pylint_venv.py  pyproject.toml  second.on.sh  surfingkeys.js  teams-for-linux.config.json  teams-for-linux.desktop
dark-mode.d/: desktop-notification.sh  gtk-theme.sh
darkman/: config.yaml
dunst/: dunst  dunstrc
efm-langserver/: config.yaml  config.yml
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  screenshot.sh  toggle_waybar.sh
i3/: config  second.toggle.sh
i3blocks/: config
i3blocks/battery/: battery
i3blocks/nm-vpn/: nm-vpn
i3blocks/volume-pipewire/: volume-pipewire
i3blocks/wttr/: i3blocks.conf  wttr
i3config/: config
joplin/: keymap.json
kitty/: kitty.conf
light-mode.d/: gtk-theme.sh
mako/: config
neovim/: 00-plugin-list.vim  01-keymaps.vim  02-plugins-config.vim  03-autocmds.vim  coc-settings.json  init.vim
neovim_new/: init.lua
networkmanager-dmenu/: config.ini
nvim/: init.lua
nvim/lua/: maps.lua  (+7 more)
openconnect-sso/: README.md  authenticator.py  hostscan-data
qutebrowser/: config.py
ranger/: rc.conf
rofi/: arthur.rasi  config  config.rasi
sway/: config  shotman.conf  toggletouch.sh  togglewaybar.sh
termite/: config
waybar/: config  style.css
(+16 files in other folders)
