[tool.poetry]
name = "allocation"
version = "0.1.0"
description = ""
authors = ["Artem Shestopalov <tema.rastaclaus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = {version = "^2.13.7", optional = true}
pycodestyle = {version = "^2.8.0", optional = true}
black = {version = "^22.3.0", optional = true}
mypy = {version = "^0.950", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.extras]
dev-tools = [
  "pylint",
  "pycodestyle",
  "black",
  "mypy",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
extension-pkg-allow-list=[]
load-plugins = []

[tool.pylint.format]
max-line-length = 120

[tool.pylint.message-control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "too-few-public-methods"
]
